# Billiards

./: .gitignore  CMakeLists.txt  imgui.ini
include/: EuclideanBilliard.h  FourthBilliard.h  SymplecticBilliard.h  Trajectory.h  camera.h  myVectors.h  shaderClass.h  shape.h
src/: 4th.cpp  EuclideanBilliard.cpp  FourthBilliard.cpp  SymplecticBilliard.cpp  Trajectory.cpp  default.frag  default.vert  euclid.cpp  fourth.frag  fourth.vert  loadTexture.frag  loadTexture.vert  phasespace.cpp  phasespace.glsl  shaderClass.cpp  shape.cpp  symplectic.cpp  symplectic.frag
